--- a/templates/history.html
+++ b/templates/history.html
@@ -21,7 +21,7 @@
             border-radius: 10px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
             width: 80%;
-            max-width: 1000px; /* Increase width if needed */
+            max-width: 1000px;
         }
         h1 {
             color: #333;
@@ -47,8 +47,8 @@
             background-color: #45a049;
         }
         .table-container {
-            overflow-x: auto; /* Horizontal scrollbar */
-            max-height: 600px; /* Adjust height to your preference */
+            overflow-x: auto;
+            max-height: 600px;
         }
         table {
             margin: 20px 0;
@@ -69,7 +69,6 @@
     <div class="container">
         <h1>History</h1>
         <p>This is the history page.</p>
-        <!-- Table container with scrollbars -->
         <div class="table-container">
             {{ table_data|safe }}
         </div>
